--- a/spring-jdbc/build.gradle
+++ b/spring-jdbc/build.gradle
@@ -10,14 +10,16 @@ repositories {
 }
 
 dependencies {
-    compile "org.springframework:spring-jdbc:5.3.3"
-    compile "org.springframework:spring-context:5.3.3"
+    implementation "org.springframework:spring-jdbc:5.3.3"
+    implementation "org.springframework:spring-context:5.3.3"
+    implementation "commons-dbcp:commons-dbcp:1.4"
+    implementation "org.postgresql:postgresql:42.7.7"
 
-    compile "commons-dbcp:commons-dbcp:1.4"
-    compile "org.postgresql:postgresql:42.2.18"
+    runtimeOnly 'com.h2database:h2:2.1.214'
+    testImplementation 'com.h2database:h2:2.1.214'
 
-    testCompile 'org.springframework:spring-test:5.3.3'
-    testCompile 'org.assertj:assertj-core:3.19.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testImplementation 'org.assertj:assertj-core:3.19.0'
+    testImplementation 'junit:junit:4.13.2'
 }
